--- a/2.Retrieving Content/3.HierCombo.html
+++ b/2.Retrieving Content/3.HierCombo.html
@@ -22,7 +22,7 @@
         
         // Next [sibling selector] "prev ~ siblings" selects all "siblings" elements that come after a "prev" element
         // ~select all elements with id 'para1' that come after a <p>
-        $("#para1 ~ p").css("border", "3px solid red");
+        //$("#para1 ~ p").css("border", "3px solid red");
     });
 </script>
 </head>
