--- a/2.Retrieving Content/6.Traversing.html
+++ b/2.Retrieving Content/6.Traversing.html
@@ -3,31 +3,32 @@
 <head>
     <title>Using jQuery Document Traversal</title>
     <link rel="stylesheet" type="text/css" href="../style.css"/>
-    <script type="text/javascript" src="../jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../jquery-3.2.1.js"></script>
     <script type="text/javascript">
-        $("document").ready(function() {
-            // The children() function retrieves the immediate (that is, first-level down) child
-            // elements of the matched set, excluding text nodes.
+        $("document").ready(function() 
+        {
+            // The children() function retrieves the immediate (that is, first-level down) child elements of the matched set, excluding text nodes.
             //$("#example").children().css("border", "3px solid red");
 
 //            var elem = $("#para1");
-//            elem.prev().css("border", "3px solid red");
-//            elem.next().css("border", "3px solid green");
+//            elem.prev().css("border", "3px solid red");//sets the border on the element before #para1 
+//            elem.next().css("border", "3px solid green");//sets the border on the element next to #para1
 //            elem.parents().css("border", "3px solid blue");
-//            elem.parentsUntil($("body")).css("border", "3px solid blue");
+//            elem.parentsUntil($("body")).css("border", "3px solid blue");//sets the border on the parents of #para1 until(excluding) <body>
             
-            // use the find function to locate content within particular elements
-            //$("#example").find("#para4").css("border", "3px solid red");
+            // use the find function to locate content within particular elements. starts on #example
+//            $("#example").find("#para4").css("border", "3px solid orange");
 
             // use the each function to iterate over a set of elements and operate on them
-//            var leftmargin = 0;
-//            var border = 3;
-//            $("#example p").each(function(index, element) {
-//                $(element).css("border", border+"px solid red")
-//                          .css("margin-left", leftmargin);
-//                border += 2;
-//                leftmargin += 10;
-//            });
+           var leftmargin = 0;
+           var border = 3;
+           //foreach <p> in element with id = 'example'
+           $("#example p").each(function(index, element) 
+           {
+               $(element).css("border", border + "px solid red").css("margin-left", leftmargin);
+               border += 2;
+               leftmargin += 10;
+           });
         });
     </script>
 </head>
