--- a/3.Manipulating Content/6.CSS.htm
+++ b/3.Manipulating Content/6.CSS.htm
@@ -3,7 +3,7 @@
 <head>
     <title>jQuery CSS Sizing and Positioning</title>
     <link rel="stylesheet" href="../style.css"/>
-    <script type="text/javascript" src="../jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../jquery-3.2.1.js"></script>
     <script type="text/javascript">
         $(function() {
             showValues();
@@ -12,6 +12,7 @@
         });
         
         function changeValues() {
+            //can also use these funcs to set values...
             $("#example").height(100);
             $("#example").width(200);
             
