--- a/4.Events/1.Binding.htm
+++ b/4.Events/1.Binding.htm
@@ -3,26 +3,31 @@
 <head>
     <title>Binding and Unbinding Events with jQuery</title>
     <link rel="stylesheet" href="../style.css"/>
-    <script type="text/javascript" src="../jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../jquery-3.2.1.js"></script>
+
     <script type="text/javascript">
-        $(function() {
-            // Older versions of jQuery used the "bind" and "unbind" functions
+        $(function() 
+        {
+            //****[Deprecated] 
+            //Older versions of jQuery used the "bind" and "unbind" functions 
             // $("#evtTarget").bind("mouseover mouseleave", highlight);
 
             // $("#evtTarget").bind("click", function(evt) {
             //     $("#evtTarget").unbind("mouseover mouseleave", highlight);
-            //     $("#evtTarget").html("<p>You shut off the hover effect!</p>");
-            // });
+            //     $("#evtTarget").html("<p>You shut off the hover effect!</p>");});
+            //****
 
             // jQuery as of 1.7 provides the universal "on" and "off" functions
+            //- params: [0]: evt names can be separeted by spaces; [1]: evthandler func called when evt happens
             $("#evtTarget").on("mouseover mouseleave", highlight);
 
             $("#evtTarget").on("click", function(evt) {
-                $("#evtTarget").off("mouseover mouseleave", highlight);
-                $("#evtTarget").html("<p>You shut off the hover effect!</p>");
-                $("#evtTarget").removeClass("highlighted");
+                $("#evtTarget").off("mouseover mouseleave", highlight); //turn off events.
+                $("#evtTarget").html("<p>You shut off the hover effect!</p>"); //add message
+                $("#evtTarget").removeClass("highlighted"); //remove class
             });
             
+            //keypress event. set textbox text to the typed char 
             $("#textEntry").on("keypress", function(evt) {
                 $("#keyPress").text(String.fromCharCode(evt.charCode));
             });
@@ -32,12 +37,14 @@
             $("#evtTarget").toggleClass("highlighted");        
         }
     </script>
+
     <style type='text/css'>
     .highlighted {
         background-color:Red;
     }
     </style>
 </head>
+
 <body>
     <h1>Binding and Unbinding Events Example</h1>
     <p>jQuery makes it simple to start and stop listening to events using the <code>on()</code> and <code>off()</code> functions. You just need to supply the name of the event you want to listen to and a function to handle it</p>
