--- a/landonhotel/MyCode/3.specials.html
+++ b/landonhotel/MyCode/3.specials.html
@@ -3,7 +3,35 @@
 <head>
 <title>Specials | The Landon Hotel</title>
 <link rel="stylesheet" href="style/style.css">
-<script src="../../jquery-1.11.1.js"></script>
+<script src="../../jquery-3.2.1.js"></script>
+
+<script>
+    $("document").ready(function () 
+    {
+        // select the H2 headings in the content section - these contain the text for the links
+        var headings = $(".content h2");
+        // create a new empty UL tag to hold the list of links
+        var list = $("<ul id='bookmarks'>");
+        // we need a counter to make sure each anchor tag has a unique name
+        var cAnchorCount = 0;
+        
+        // for each one of the H2s, create a named anchor to link to and a link for the list
+        headings.each(function(indx, elem) 
+        {
+            // set the HTML of this H2 to contain the new anchor tag that is the link destination
+            //~ insert named anchor in front of the heading, that'll be the link destination
+            $(this).html("<a name='bookmark" + cAnchorCount + "'></a>" + $(this).html());
+
+            // now make a new LI tag for the list that links to the anchor tag and has the text of the H2
+            //~ create list items with link to destination ~ 
+            list.append($("<li><a href='#bookmark" + cAnchorCount++ + "'> " + $(this).text() + "</a></li>"));
+        });
+        // when we're done, insert the list after the H1 heading that lists the specials
+        //~ add content after h1 ("Specials") ~
+        $(".content h1").after(list);
+    });
+</script>
+
 </head>
 <body>
 	<div class="container">
