--- a/5.Animations/1.ShowHide.htm
+++ b/5.Animations/1.ShowHide.htm
@@ -3,9 +3,11 @@
 <head>
     <title>Showing and Hiding Elements</title>
     <link rel="stylesheet" href="../style.css"/>
-    <script type="text/javascript" src="../jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../jquery-3.2.1.js"></script>
+
     <script type="text/javascript">
-        $(function() {
+        $(function() 
+        {
             $("#show").click(function() {
                 $("#theDiv").show("fast");
             });
@@ -22,6 +24,7 @@
             $(this).text("Animation complete");
         }
     </script>
+
     <style type="text/css">
         #theDiv {
             border: 1px solid gray;
