--- a/landonhotel/MyCode/5.index.html
+++ b/landonhotel/MyCode/5.index.html
@@ -3,7 +3,33 @@
 <head>
 <title>The Landon Hotel</title>
 <link rel="stylesheet" href="style/style.css">
-<script src="../../jquery-1.11.1.js"></script>
+
+<script src="../../jquery-3.2.1.js"></script>
+<script type="text/javascript">
+
+    $(function() 
+    {
+        // create the image rotator
+        setInterval("rotateImages()", 3000);
+    });
+
+    function rotateImages() 
+    {
+        var oCurPhoto = $('#hero div.current'); //current photo
+        var oNxtPhoto = oCurPhoto.next(); //next photo ~sibling
+
+        if (oNxtPhoto.length == 0) //if reached the end of the list
+            oNxtPhoto = $('#hero div:first'); //return to first
+
+        oCurPhoto.removeClass('current').addClass('previous'); //move it back
+
+        oNxtPhoto.css({ opacity: 0.0 }) //fade in
+        	.addClass('current') //bring it to the front
+        	.animate({ opacity: 1.0 }, 1000, //over 1 second image fades
+        		function() {oCurPhoto.removeClass('previous');}); //on completion..
+    }
+</script>
+
 </head>
 <body>
 	<div class="container">
